# SVG_CREATOR

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Point.cpp  Point.h  README.md  SvgCreator.h  main.cpp
Shape/: Circle.cpp  Circle.h  Rect.cpp  Rect.h  Shape.cpp  Shape.h  Triangle.cpp  Triangle.h
headers/: Circle.h  Point.h  Rect.h  Shape.h  SvgReader.h  Triangle.h
src/: Circle.cpp  Point.cpp  Rect.cpp  SvgCreator.cpp  SvgReader.cpp  Triangle.cpp  main.cpp
